# ros_ci_lab

./: CMakeLists.txt  README.md  codecov.yaml  package.xml
.github/workflows/: action-ros-ci.yaml  action-ros-lint.yaml
include/ros_ci_lab/: common_operations.hpp
src/: common_operations.cpp
test/: test_common_operations.cpp
