<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ros_ci_lab</name>
	<version>0.0.0</version>
	<description>A boilerplate package to play with CI tools</description>

	<maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>

	<license>Apache License 2.0</license>
	
  <author email="mateus.amarujo@gmail.com">Mateus Amarante</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_cpplint</test_depend>
	<test_depend>ament_cmake_uncrustify</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>

	<export>
		<build_type>ament_cmake	</build_type>
	</export>
</package>
